Commited fix to issue #858 (http://ocportal.com/tracker/view.php?id=858). [main_image_fader block illegible on panels]

--- a/themes/default/css/galleries.css
+++ b/themes/default/css/galleries.css
@@ -189,6 +189,17 @@
 	width: 23em;
 }
 
+/* Make sure it fits okay on the side panel */
+.global_side_panel .gallery_tease_pic {
+	width: auto;
+}
+.global_side_panel .gallery_tease_pic_wrap h2, .global_side_panel .gallery_tease_pic_wrap h3 {
+	display: none;
+}
+.global_side_panel .img_thumb_wrap .img_thumb {
+	max-width: 100%;
+}
+
 /* Image fader block */
 
 .image_fader_box {
